@@ -1,3 +1,8 @@
+2004-07-18  Mark Wielaard  <mark@klomp.org>
+
+	* gnu/testlet/java/lang/Class/init.java: Allow early initialization of
+	inner class and interface.
+
 2004-07-18  Stephen Crawley  <crawley@dstc.edu.au>
 
 	* gnu/testlet/java/awt/Choice/getSelected.java: Tweaked to avoid
